# ai-cooking-zundamon-bot

./: README.md  pyproject.toml  samconfig.toml  template.yaml
src/: requirements.txt
src/ai_cooking_zundamon_bot/common/: discord.py  util.py
src/ai_cooking_zundamon_bot/common/ai/: zudamon.py
src/ai_cooking_zundamon_bot/common/aws/: ssm.py
src/ai_cooking_zundamon_bot/common/event/: aczb.py
src/ai_cooking_zundamon_bot/function/api/post/: function.py
src/ai_cooking_zundamon_bot/function/worker/recipe/: function.py
tools/: create_index.py  register_command.py
