[tool.poetry]
name = "ai_cooking_zundamon_bot"
version = "0.1.0"
description = ""
authors = ["tosuri13 <85057870+tosuri13@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}, {include = "ai_cooking_zundamon_bot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.131"
pynacl = "^1.5.0"
requests = "^2.31.0"
numpy = "1.26.4"
faiss-cpu = "^1.8.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
build = { shell = "poetry export --without-hashes -o src/requirements.txt && sam build" }
deploy = { shell = "sam deploy" }
